# cpp-dev-tool

./: .gitignore  README.md
architecture/good_architecture/: coupling_cohesion.md  cpp_philosophy.md  dry_rule.md  good_architecture.md
architecture/solid/: interface_segregation.cc  interface_segregation.md  liskov_substitution.cc  liskov_substitution.md  open_closed.cc  open_closed.md  solid.md
concurrent_parallel/scheduled_task_callback/: scheduled_task_callback.cc  scheduled_task_callback.hpp  scheduled_task_callback_test.cc
concurrent_parallel/sharing_data_between_threads/: 1_protecting_list_with_mutex.cc  1_using_mutexes_in_cpp.md  2_accidently_passing_out_protected_data.cc  2_structuring_code_for_protecting_shared_data.md  3_Spotting_race_conditions_inherent_in_interfaces.md  4_deadlock.md  README.md
concurrent_parallel/timeout_callback/: timeout_callback.cc  timeout_callback.hpp  timeout_callback_test.cc
data_structure/blocking_intrusive_list/: blocking_intrusive_list.h  test_blocking_intrusive_list.cc
data_structure/blocking_intrusive_queue/: CMakeLists.txt  blocking_intrusive_queue.h  blocking_intrusive_queue.hpp  test_blocking_intrusive_queue.cc
data_structure/blocking_queue/: CMakeLists.txt  blocking_queue.hpp  test_blocking_queue.cc
data_structure/blocking_stack/: CMakeLists.txt  blocking_stack.hpp  test_blocking_stack.cc
design_pattern/gang_of_four/: README.md
design_pattern/gang_of_four/behavior/state/boost_msm/: CMakeLists.txt  boost_msm_state_machine.cc  boost_msm_state_machine.hpp
lambda/: curious_lambda.cc
(+41 files in other folders)
